[gd_scene load_steps=11 format=3 uid="uid://b81pag1uwmfq2"]

[ext_resource type="Script" path="res://Escenas/FinalPantalla/resumen_pantalla.gd" id="1_qw8f0"]
[ext_resource type="PackedScene" uid="uid://ccgnq0hn13s23" path="res://Escenas/Home/home.tscn" id="2_40rp8"]
[ext_resource type="Texture2D" uid="uid://c8rfpxgo40d1a" path="res://Assets/KennyUiPack/metalPanel.png" id="2_iy8or"]
[ext_resource type="FontFile" uid="uid://cvvix5s84k432" path="res://Fonts/gomarice_kaiju_monster.ttf" id="3_l12lk"]
[ext_resource type="Theme" uid="uid://cecxw5px7ebb1" path="res://Resources/ButtonTheme/defaultButton.tres" id="4_myhx5"]
[ext_resource type="FontFile" uid="uid://cv6qy4iss6rn2" path="res://Fonts/kenvector_future.ttf" id="5_g643b"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n76dv"]
texture = ExtResource("2_iy8or")
texture_region_size = Vector2i(25, 25)
1:0/0 = 0
1:1/0 = 0
2:1/0 = 0
2:0/0 = 0
3:0/0 = 0
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
3:3/0 = 0
3:2/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_wgl32"]
tile_size = Vector2i(25, 25)
sources/2 = SubResource("TileSetAtlasSource_n76dv")

[sub_resource type="LabelSettings" id="LabelSettings_lvgky"]
font = ExtResource("3_l12lk")
font_size = 68
font_color = Color(1, 0, 0.721569, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hwju7"]
font = ExtResource("5_g643b")
font_size = 22
font_color = Color(0, 0, 0, 1)

[node name="resumen_pantalla" type="CanvasLayer"]
script = ExtResource("1_qw8f0")
home = ExtResource("2_40rp8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 651.0
color = Color(1, 1, 0, 0.160784)

[node name="TileMap" type="TileMap" parent="."]
self_modulate = Color(1, 1, 1, 0.866667)
tile_set = SubResource("TileSet_wgl32")
format = 2
layer_0/tile_data = PackedInt32Array(524314, 131074, 0, 524315, 65538, 0, 524316, 131074, 0, 524317, 65538, 0, 1114138, 131074, 1, 1179674, 131074, 3, 1114139, 65538, 1, 1179675, 65538, 3, 1114140, 131074, 1, 1179676, 131074, 3, 1114141, 65538, 1, 1179677, 65538, 3, 524320, 131074, 0, 589856, 65538, 1, 655392, 65538, 2, 720928, 65538, 1, 524321, 65538, 0, 589857, 65538, 1, 655393, 65538, 2, 720929, 65538, 1, 524322, 131074, 0, 589858, 65538, 1, 655394, 65538, 2, 720930, 65538, 1, 524323, 196610, 0, 589859, 196610, 1, 655395, 196610, 2, 720931, 196610, 1, 983072, 65538, 1, 1048608, 65538, 2, 1114144, 131074, 1, 1179680, 131074, 3, 983073, 65538, 1, 1048609, 65538, 2, 1114145, 65538, 1, 1179681, 65538, 3, 983074, 65538, 1, 1048610, 65538, 2, 1114146, 131074, 2, 1179682, 131074, 3, 983075, 196610, 1, 1048611, 196610, 2, 1114147, 196610, 1, 1179683, 196610, 3, 983050, 2, 1, 1048586, 2, 2, 1114122, 2, 1, 1179658, 2, 3, 983051, 65538, 1, 1048587, 65538, 1, 1114123, 65538, 2, 1179659, 65538, 3, 983052, 65538, 1, 1048588, 65538, 2, 1114124, 131074, 1, 1179660, 131074, 3, 983053, 65538, 1, 1048589, 65538, 2, 1114125, 65538, 1, 1179661, 65538, 3, 524298, 2, 0, 589834, 2, 1, 655370, 2, 2, 720906, 2, 1, 524299, 65538, 0, 589835, 65538, 1, 655371, 65538, 2, 720907, 65538, 1, 524300, 131074, 0, 589836, 65538, 1, 655372, 65538, 2, 720908, 65538, 1, 524301, 65538, 0, 589837, 65538, 1, 655373, 65538, 2, 720909, 65538, 1, 524302, 131074, 0, 589838, 65538, 1, 655374, 65538, 2, 720910, 65538, 1, 524303, 65538, 0, 589839, 65538, 1, 655375, 65538, 2, 720911, 65538, 1, 524304, 131074, 0, 589840, 65538, 1, 655376, 65538, 2, 720912, 65538, 1, 524305, 65538, 0, 589841, 65538, 1, 655377, 65538, 2, 720913, 65538, 1, 524306, 131074, 0, 589842, 65538, 1, 655378, 65538, 2, 720914, 65538, 1, 524307, 65538, 0, 589843, 65538, 1, 655379, 65538, 2, 720915, 65538, 1, 524308, 131074, 0, 589844, 65538, 1, 655380, 65538, 2, 720916, 65538, 1, 524309, 65538, 0, 589845, 65538, 1, 655381, 65538, 2, 720917, 65538, 1, 524310, 131074, 0, 589846, 65538, 1, 655382, 65538, 2, 720918, 65538, 1, 524311, 65538, 0, 589847, 65538, 1, 655383, 65538, 2, 720919, 65538, 1, 524312, 131074, 0, 589848, 65538, 1, 655384, 65538, 2, 720920, 65538, 1, 524313, 65538, 0, 589849, 65538, 1, 655385, 65538, 2, 720921, 65538, 1, 589850, 65538, 1, 655386, 65538, 2, 720922, 65538, 1, 589851, 65538, 1, 655387, 65538, 2, 720923, 65538, 1, 589852, 65538, 1, 655388, 65538, 2, 720924, 65538, 1, 589853, 65538, 1, 655389, 65538, 2, 720925, 65538, 1, 524318, 131074, 0, 589854, 65538, 1, 655390, 65538, 2, 720926, 65538, 1, 524319, 65538, 0, 589855, 65538, 1, 655391, 65538, 2, 720927, 65538, 1, 786464, 65538, 2, 852000, 65538, 1, 917536, 65538, 2, 786465, 65538, 2, 852001, 65538, 1, 917537, 65538, 2, 786466, 65538, 2, 852002, 65538, 1, 917538, 65538, 2, 786467, 196610, 2, 852003, 196610, 1, 917539, 196610, 2, 983068, 65538, 1, 1048604, 65538, 2, 983069, 65538, 1, 1048605, 65538, 2, 983070, 65538, 1, 1048606, 65538, 2, 1114142, 131074, 1, 1179678, 131074, 3, 983071, 65538, 1, 1048607, 65538, 2, 1114143, 65538, 1, 1179679, 65538, 3, 983064, 65538, 1, 1048600, 65538, 2, 1114136, 131074, 1, 1179672, 131074, 3, 983065, 65538, 1, 1048601, 65538, 2, 1114137, 65538, 1, 1179673, 65538, 3, 983066, 65538, 1, 1048602, 65538, 2, 983067, 65538, 1, 1048603, 65538, 2, 983060, 65538, 1, 1048596, 65538, 2, 1114132, 131074, 1, 1179668, 131074, 3, 983061, 65538, 1, 1048597, 65538, 2, 1114133, 65538, 1, 1179669, 65538, 3, 983062, 65538, 1, 1048598, 65538, 2, 1114134, 131074, 1, 1179670, 131074, 3, 983063, 65538, 1, 1048599, 65538, 2, 1114135, 65538, 1, 1179671, 65538, 3, 983056, 65538, 1, 1048592, 65538, 2, 1114128, 131074, 1, 1179664, 131074, 3, 983057, 65538, 1, 1048593, 65538, 2, 1114129, 65538, 1, 1179665, 65538, 3, 983058, 65538, 1, 1048594, 65538, 2, 1114130, 131074, 1, 1179666, 131074, 3, 983059, 65538, 1, 1048595, 65538, 2, 1114131, 65538, 1, 1179667, 65538, 3, 983054, 65538, 1, 1048590, 65538, 2, 1114126, 131074, 1, 1179662, 131074, 3, 983055, 65538, 1, 1048591, 65538, 2, 1114127, 65538, 1, 1179663, 65538, 3, 786443, 65538, 2, 851979, 65538, 1, 917515, 65538, 2, 786444, 65538, 2, 851980, 65538, 1, 917516, 65538, 2, 786445, 65538, 2, 851981, 65538, 1, 917517, 65538, 2, 786446, 65538, 2, 851982, 65538, 1, 917518, 65538, 2, 786447, 65538, 2, 851983, 65538, 1, 917519, 65538, 2, 786448, 65538, 2, 851984, 65538, 1, 917520, 65538, 2, 786449, 65538, 2, 851985, 65538, 1, 917521, 65538, 2, 786450, 65538, 2, 851986, 65538, 1, 917522, 65538, 2, 786451, 65538, 2, 851987, 65538, 1, 917523, 65538, 2, 786452, 65538, 2, 851988, 65538, 1, 917524, 65538, 2, 786453, 65538, 2, 851989, 65538, 1, 917525, 65538, 2, 786454, 65538, 2, 851990, 65538, 1, 917526, 65538, 2, 786455, 65538, 2, 851991, 65538, 1, 917527, 65538, 2, 786456, 65538, 2, 851992, 65538, 1, 917528, 65538, 2, 786457, 65538, 2, 851993, 65538, 1, 917529, 65538, 2, 786458, 65538, 2, 851994, 65538, 1, 917530, 65538, 2, 786459, 65538, 2, 851995, 65538, 1, 917531, 65538, 2, 786460, 65538, 2, 851996, 65538, 1, 917532, 65538, 2, 786461, 65538, 2, 851997, 65538, 1, 917533, 65538, 2, 786462, 65538, 2, 851998, 65538, 1, 917534, 65538, 2, 786442, 2, 2, 851978, 2, 1, 917514, 2, 2, 786463, 65538, 2, 851999, 65538, 1, 917535, 65538, 2)

[node name="LabelTitle" type="Label" parent="."]
offset_left = 252.0
offset_top = 204.0
offset_right = 897.0
offset_bottom = 342.0
text = " You Win!"
label_settings = SubResource("LabelSettings_lvgky")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LastText" type="Label" parent="."]
visible = false
offset_left = 251.0
offset_top = 316.0
offset_right = 896.0
offset_bottom = 374.0
text = "Want more? Leave a comment.
Thanks for playin"
label_settings = SubResource("LabelSettings_hwju7")
horizontal_alignment = 1

[node name="ButtonGoHome" type="Button" parent="."]
offset_left = 490.0
offset_top = 397.0
offset_right = 677.0
offset_bottom = 446.0
theme = ExtResource("4_myhx5")
text = "OMG NICE!"

[node name="ButtonRetryLevel" type="Button" parent="."]
offset_left = 490.0
offset_top = 327.0
offset_right = 677.0
offset_bottom = 378.0
theme = ExtResource("4_myhx5")
text = "Wait, I can do it! "

[connection signal="pressed" from="ButtonGoHome" to="." method="_on_button_go_home_pressed"]
[connection signal="pressed" from="ButtonRetryLevel" to="." method="_on_button_retry_level_pressed"]
